--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var width = screen.width;
 var height = screen.height;
 
 //WIDTH x HEIGHT
-var game = new Phaser.Game(1280, 720, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+var game = new Phaser.Game(width, height, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
 function preload() {
 
@@ -26,20 +26,21 @@ function preload() {
     game.load.image('ground', 'assets/ground.png');
     game.load.image('platform', 'assets/platform.png');
     game.load.image('star', 'assets/barrel.png');
-    game.load.spritesheet('player', 'assets/PlayerSprite.png', 90, 110);
+    game.load.spritesheet('player', 'assets/PlayerSprite.png', 74, 111);
 
 }
 
 var player;
 var platforms;
 var cursors;
-
+var fpsText;
+var fps;
 var stars;
-var score = 0;
-var scoreText;
+var fpsText;
+var playerName;
 
 function create() {
-this.background = this.game.add.tileSprite(0, 0, this.game.width, this.game.height, 'sky');
+
 this.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
 this.scale.minWidth = 240;
 this.scale.minHeight = 170;
@@ -49,12 +50,16 @@ this.scale.setScreenSize(true);
 this.game.scale.pageAlignHorizontally = true;
 this.game.scale.pageAlignVertically = true;
 this.game.scale.refresh();
-this.game.world.setBounds(0, 0, 3000, height);
+this.game.world.setBounds(0, 0, width*3, height);
+game.time.advancedTiming = true
+//fpsText = game.add.text(16, 16, 'FPS:' + fps, { fontSize: '32px', fill: '#000' });
     //  We're going to be using physics, so enable the Arcade Physics system
     game.physics.startSystem(Phaser.Physics.ARCADE);
 
     //  A simple background for our game
-    game.add.sprite(0, 300, 'sky');
+    game.add.sprite(0, 0, 'sky');
+    game.add.sprite(width, 0, 'sky');
+    game.add.sprite(width + width, 0, 'sky');
 
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = game.add.group();
@@ -63,35 +68,39 @@ this.game.world.setBounds(0, 0, 3000, height);
     platforms.enableBody = true;
 
     // Here we create the ground.
-    var ground = platforms.create(0, game.world.height - 80, 'ground');
+    var ground = platforms.create(0, game.world.height - 122, 'ground');
     //  This stops it from falling away when you jump on it
     ground.body.immovable = true;
 
-    ground = platforms.create(width - 640, game.world.height - 80, 'ground');
+    ground = platforms.create(width, game.world.height - 122, 'ground');
     ground.body.immovable = true;
 
+    ground = platforms.create(width + width, game.world.height - 122, 'ground');
+    ground.body.immovable = true;
+
+
     //  Now let's create two ledges
-    var ledge = platforms.create(720, 900, 'platform');
-    ledge.body.immovable = true;
-    ledge.scale.setTo(0.6, 0.6);
-    ledge = platforms.create(-150, 250, 'platform');
-    ledge.body.immovable = true;
-    ledge.scale.setTo(0.6, 0.6);
+    //var ledge = platforms.create(720, 0, 'platform');
+    //ledge.body.immovable = true;
+
+    //ledge = platforms.create(-150, 0, 'platform');
+    //ledge.body.immovable = true;
+
 
     // The player and its settings
-    player = game.add.sprite(32, game.world.height - 150, 'dude');
+    player = game.add.sprite(32, game.world.height - 300, 'player');
 
     //  We need to enable physics on the player
     game.physics.arcade.enable(player);
 
     //  Player physics properties. Give the little guy a slight bounce.
     player.body.bounce.y = 0.2;
-    player.body.gravity.y = 300;
+    player.body.gravity.y = 1000;
     player.body.collideWorldBounds = true;
 
     //  Our two animations, walking left and right.
-    player.animations.add('left', [0, 3, 2], 10, true);
-    player.animations.add('right', [4, 1, 4], 10, true);
+    player.animations.add('left', [1, 1, 1], 10, true);
+    player.animations.add('right', [0, 0, 0], 10, true);
 
     //  Finally some stars to collect
     stars = game.add.group();
@@ -100,7 +109,7 @@ this.game.world.setBounds(0, 0, 3000, height);
     stars.enableBody = true;
 
     //  Here we'll create 12 of them evenly spaced apart
-    for (var i = 0; i < 12; i++)
+    for (var i = 0; i < 3; i++)
     {
         //  Create a star inside of the 'stars' group
         var star = stars.create(i * 70, 500, 'star');
@@ -112,9 +121,10 @@ this.game.world.setBounds(0, 0, 3000, height);
         star.body.bounce.y = 0.5;
     }
 
-    //  The score
-    scoreText = game.add.text(16, 16, 'Slain bitches: 0', { fontSize: '32px', fill: '#000' });
-
+    //Lägger till playerName!
+    var playerNameStyle = { font: "32px Calibri", fill: "#fff", wordWrap: true, wordWrapWidth: player.width, align: "center" };
+    playerName = game.add.text(0, 0, "Hassan", playerNameStyle);
+    playerName.anchor.set(0.5);
     //  Our controls.
     cursors = game.input.keyboard.createCursorKeys();
     game.camera.follow(player);
@@ -153,16 +163,19 @@ function update() {
     {
         //  Stand still
         player.animations.stop();
-
-        player.frame = 4;
     }
 
     //  Allow the player to jump if they are touching the ground.
-    if (cursors.up.isDown && player.body.touching.down)
+    if (cursors.up.isDown)
     {
         player.body.velocity.y = -350;
     }
 
+    //PlayerName
+    playerName.x = Math.floor(player.x + player.width / 2);
+    playerName.y = Math.floor(player.y + player.height - player.height/2 - player.height/3 - player.height/3);
+
+    //fps = game.time.fps;
 }
 
 
