--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ function preload() {
     game.load.image('ground', 'assets/ground.png');
     game.load.image('platform', 'assets/platform.png');
     game.load.image('star', 'assets/barrel.png');
-    game.load.spritesheet('player', 'assets/PlayerSprite.png', 74, 111);
+    game.load.spritesheet('player', 'assets/PlayerSprite2.png', 74, 111);
 
 }
 
@@ -99,8 +99,8 @@ game.time.advancedTiming = true
     player.body.collideWorldBounds = true;
 
     //  Our two animations, walking left and right.
-    player.animations.add('left', [1, 1, 1], 10, true);
-    player.animations.add('right', [0, 0, 0], 10, true);
+    player.animations.add('left', [5, 6, 7, 8, 9], 10, true);
+    player.animations.add('right', [0, 1, 2, 3, 4], 10, true);
 
     //  Finally some stars to collect
     stars = game.add.group();
