--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ function preload() {
     game.load.image('platform', 'assets/platform.png');
     game.load.image('star', 'assets/barrel.png');
     game.load.spritesheet('player', 'assets/PlayerSprite2.png', 74, 111);
+    // Boar sprite
+    game.load.spritesheet('boar', 'assets/boarsprite.png', 172, 99);
 
 }
 
@@ -128,7 +130,6 @@ game.time.advancedTiming = true
     //  Our controls.
     cursors = game.input.keyboard.createCursorKeys();
     game.camera.follow(player);
-
 }
 
 function update() {
