--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@ game.time.advancedTiming = true
     // Adds group for boars 
     boars = game.add.group();
     boars.enableBody = true;
-    
 
     // Created function to add boars
 for (var i = 0; i < 5; i++)
 {
     var boar = boars.create(i * 250, game.world.height - 300, 'boar');
         boar.body.collideWorldBounds = true;
+       // boar.animations.add('left', [4, 1, 0, 2, 3, 4], 10, true);
+        //boar.animations.add('right', [10, 6, 5, 7, 8, 10], 10, true);
         boar.body.gravity.y = 1000;
         boar.body.bounce.y = 0.2;
     
@@ -167,6 +168,7 @@ function update() {
     //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
    // game.physics.arcade.overlap(player, stars, null, this);
 
+
     //  Reset the players velocity (movement)
     player.body.velocity.x = 0;
 
@@ -183,12 +185,15 @@ function update() {
         player.body.velocity.x = 350;
 
         player.animations.play('right');
+
     }
     else
     {
         //  Stand still
         player.animations.stop();
     }
+
+
 
     //  Allow the player to jump if they are touching the ground.
     if (cursors.up.isDown)
