--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ for (var i = 0; i < 5; i++)
     bullets.setAll('checkWorldBounds', true);
     bullets.setAll('outOfBoundsKill', true);
     
-    sprite = game.add.sprite(400, 300, 'arrow');
+    sprite = game.add.sprite(0, 0);
     sprite.anchor.set(0.5);
 
     game.physics.enable(sprite, Phaser.Physics.ARCADE);
