--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ function update() {
         nextFire = game.time.now + fireRate;
 
         var bullet = bullets.getFirstDead();
-
+        bullet.scale.setTo(0.8,0.8);
         bullet.reset(player.x - 8, player.y - 8);
 
         bullet.rotation = game.physics.arcade.angleToPointer(player);
