--- a/index.html
+++ b/index.html
@@ -302,8 +302,15 @@ function render() {
     explosion.animations.add('explosion');
     explosion.play('explosion', 30, false, true);
     bullet.kill();
+    if(enemy.health <= 0)
+    {
+        console.log(enemy.health);
+        enemy.kill();
+    }
+    else{
     enemy.health -= 10;
     console.log(enemy.health);
+    }
 }
 
 </script>
