--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@ function render() {
 }
     
 
-    function hitObstacle(obstacle, bullet)
-    {
+    function hitObstacle(obstacle, bullet) {        
         var explosion = explosions.getFirstExists(false);
         explosion = this.game.add.sprite(0, 0, 'explosion');
         var animation = explosion.animations.add('explosion', [0,1,2,3], 20, false);
@@ -295,23 +294,24 @@ function render() {
         explosion.anchor.set(0.3, 0.3);
         explosion.play('explosion', 20, false, true);
         bullet.kill();
-
     }
-
-    function hitEnemy(boar, bullet) {
-
+    
+    function exploding(boar) {
         var explosion = explosions.getFirstExists(false);
         explosion = this.game.add.sprite(0, 0, 'explosion');
         var animation = explosion.animations.add('explosion', [0,1,2,3], 20, false);
         animation.killOnComplete = true;
         explosion.reset(boar.body.x + 10, boar.body.y);
         explosion.play('explosion', 20, false, true);
+    }
+
+    function hitEnemy(boar, bullet) {
+        exploding(boar);
         bullet.kill();
         console.log(boar.health);
         boar.damage(10);
         boar.animations.play('walk_left');
-
-}
+    }
 
 </script>
 
