--- a/index.html
+++ b/index.html
@@ -285,29 +285,29 @@ function render() {
 }
     
 
-    function hitObstacle(obstacle, bullet)
+    function getExplosion(x, y)
     {
         var explosion = explosions.getFirstExists(false);
         explosion = this.game.add.sprite(0, 0, 'explosion');
         explosion.scale.setTo(1.2, 1.2);
         var animation = explosion.animations.add('explosion', [0,1,2,3], 20, false);
         animation.killOnComplete = true;
-        explosion.reset(bullet.body.x, bullet.body.y);
+        explosion.reset(x, y);
         explosion.anchor.set(0.3, 0.3);
         explosion.play('explosion', 20, false, true);
-        bullet.kill();
 
+    }
+
+
+    function hitObstacle(obstacle, bullet)
+    {
+        getExplosion(bullet.body.x, bullet.body.y);
+        bullet.kill();
     }
 
     function hitEnemy(boar, bullet) {
 
-        var explosion = explosions.getFirstExists(false);
-        explosion = this.game.add.sprite(0, 0, 'explosion');
-        explosion.scale.setTo(1.2, 1.2);
-        var animation = explosion.animations.add('explosion', [0,1,2,3], 20, false);
-        animation.killOnComplete = true;
-        explosion.reset(boar.body.x, boar.body.y - 15);
-        explosion.play('explosion', 20, false, true);
+        getExplosion(boar.body.x + 30, boar.body.y+15);
         bullet.kill();
         console.log(boar.health);
         boar.damage(10);
