La till lite fler platformar

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ game.time.advancedTiming = true
     ledge.body.immovable = true;  
     
     ledge = platforms.create(2600, game.world.height - 500, 'platform');
+    ledge.body.immovable = true; 
+    
+    ledge = platforms.create(4200, game.world.height - 700, 'platform');
     ledge.body.immovable = true;
 
 
